[tool.poetry]
name = "visclo"
version = "0.1.0"
description = ""
authors = ["uigctaw <uigctaw@metadata.social>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
bandit = "^1.7.5"
flake8 = "^6.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]
init-hook="import sys; sys.path.append('.')"

    [tool.pylint.messages_control]
    disable = [
        "missing-module-docstring",
        "missing-class-docstring",
        "missing-function-docstring",
        "too-few-public-methods",
        "duplicate-code",
        "use-dict-literal",
        "unbalanced-tuple-unpacking",
    ]

    [tool.pylint.basic_checker]
    good-names=['i', 'j', 'k', '_', 'fn']


[tool.bandit.assert_used]
skips = ['./tests/*']
